--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
   },
   "tasks": [
     {
-      "label": "Build .NET PXL.sln",
+      "label": "PXL-API :: Build .NET PXL.sln",
       "group": {
         "kind": "build",
         "isDefault": false
@@ -24,7 +24,16 @@
       "problemMatcher": ["$msCompile"]
     },
     {
-      "label": "Start Simulator",
+      "label": "PXL-API :: Publish Pxl.sln for local C# development",
+      "type": "shell",
+      "command": "./publish-pxl-sln-local.sh",
+      "group": {
+        "kind": "build",
+        "isDefault": false
+      }
+    },
+    {
+      "label": "PXL-API :: Start Simulator",
       "type": "shell",
       "command": "./start-simulator.sh",
       "group": {
